--- a/ChinookSolution/WebApp/Web.config
+++ b/ChinookSolution/WebApp/Web.config
@@ -10,7 +10,7 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
+  <connectionStrings configSource="WebConnectionStrings.config">
 
   </connectionStrings>
   <system.web>
@@ -106,6 +106,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context disableDatabaseInitialization="true" type="ChinookSystem.DAL.ChinookContext,ChinookSystem">
+        
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
