--- a/ChinookSolution/WebApp/WebConnectionStrings.config
+++ b/ChinookSolution/WebApp/WebConnectionStrings.config
@@ -2,5 +2,5 @@
   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084508.mdf;Initial Catalog=aspnet-WebApp-20190906084508;Integrated Security=True"
     providerName="System.Data.SqlClient" />
   <add name="ChinookDB"
-      connectionString="Data Source.; Initial Catalog=Chinook; Integrated Security = true" providerName="System.Data.SqlCliet" />
+      connectionString="Data Source=.; Initial Catalog=Chinook; Integrated Security = true" providerName="System.Data.SqlClient" />
 </connectionStrings>
