LinqPad Artist Name

--- a/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlbumsOfArtist.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="Entities\Customer.cs" />
