--- a/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlbumsOfArtist.cs" />
+    <Compile Include="POCOs\AlbumsOfArtist.cs" />
     <Compile Include="Entities\Album.cs" />
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="Entities\Customer.cs" />
@@ -66,7 +66,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DTOs\" />
-    <Folder Include="POCOs\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
