--- a/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSolution/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -63,7 +63,10 @@
     <Compile Include="Entities\Playlist.cs" />
     <Compile Include="Entities\PlaylistTrack.cs" />
     <Compile Include="Entities\Track.cs" />
+    <Compile Include="POCOs\SelectionList.cs" />
+    <Compile Include="POCOs\TrackList.cs" />
     <Compile Include="POCOs\TruckPOCO.cs" />
+    <Compile Include="POCOs\UserPlaylistTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
