--- a/ChinookSolution/WebApp/Web.config
+++ b/ChinookSolution/WebApp/Web.config
@@ -14,6 +14,7 @@
   <connectionStrings configSource="WebConnectionStrings.config">
 
   </connectionStrings>
+  <appSettings configSource="WebAppSettings.config"></appSettings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.7.2"/>
