--- a/ChinookSolution/WebApp/WebConnectionStrings.config
+++ b/ChinookSolution/WebApp/WebConnectionStrings.config
@@ -1,6 +1,11 @@
 ﻿<connectionStrings>
-  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084508.mdf;Initial Catalog=aspnet-WebApp-20190906084508;Integrated Security=True"
-    providerName="System.Data.SqlClient" />
+  <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20190906084508.mdf;Initial Catalog=aspnet-WebApp-20190906084508;Integrated Security=True"
+    providerName="System.Data.SqlClient" />-->
+  
+
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Chinook;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    
   <add name="ChinookDB"
       connectionString="Data Source=.; Initial Catalog=Chinook; Integrated Security = true" providerName="System.Data.SqlClient" />
 </connectionStrings>
